# tm-system

./: BasicDesign.md  README.md
ros_ws/: .env.native.example  .env.wsl2.example  .gitignore  compose.yml
ros_ws/.devcontainer/: devcontainer.json
ros_ws/.github/workflows/: ros2_ci.yml
ros_ws/docker/: .dockerignore  Dockerfile  entrypoint.sh
ros_ws/output/session_20260609_150602/: summary.json
ros_ws/output/session_20260609_155356/: latest.json  summary.json  transcriptions.jsonl
ros_ws/output/session_20260609_160724/: summary.json
ros_ws/output/session_20260609_160901/: summary.json
ros_ws/output/session_20260609_161032/: summary.json  transcriptions.jsonl
ros_ws/scripts/: setup-audio-env.sh
ros_ws/src/LR-asr/: README.md  package.xml  setup.cfg  setup.py  walkthrough.md
ros_ws/src/LR-asr/config/: params.yaml
ros_ws/src/LR-asr/factory_asr/: asr_engine_node.py  audio_capture_node.py  output_handler_node.py  preprocessor_node.py
ros_ws/src/LR-asr/launch/: factory_asr.launch.py
ros_ws/src/another_package/: README.md
ros_ws/src/human_detection_package/: package.xml  setup.cfg  setup.py
ros_ws/src/human_detection_package/human_detection_package/: human_detector_node.py  human_selector_node.py  human_tracker_node.py
ros_ws/src/human_detection_package/launch/: human_detection_package.launch.py
ros_ws/src/human_detection_package/test/: test_dummy_human_detector.py  test_dummy_human_selector.py  test_dummy_human_tracker.py
ros_ws/src/motion_control_package/: package.xml  setup.cfg  setup.py
ros_ws/src/motion_control_package/launch/: motion_control_package.launch.py
ros_ws/src/motion_control_package/motion_control_package/: direct_ctrl_selector_node.py  move_controller_node.py
ros_ws/src/motion_control_package/test/: test_dummy_move_controller.py
ros_ws/src/my_package/: README.md
ros_ws/src/tm_system_bringup/: package.xml  setup.cfg  setup.py
ros_ws/src/tm_system_bringup/launch/: test_dummy_topics.launch.py  tm_system_all.launch.py
ros_ws/src/tm_system_bringup/test/: test_dummy_direct_ctrl_selector.py  test_dummy_esp32_bridge.py  test_dummy_target_point_selector.py
ros_ws/src/tm_system_bringup/tm_system_bringup/: direct_ctrl_selector_node.py  dummy_lidar_publisher.py  dummy_manual_target_publisher.py  dummy_manual_vel_publisher.py  esp32_bridge_node.py  target_point_selector_node.py
ros_ws/src/tm_system_msgs/: CMakeLists.txt  package.xml
ros_ws/src/tm_system_msgs/msg/: HumanClusterList.msg  TrackedHuman.msg  TrackedHumanList.msg
