<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>factory_asr</name>
  <version>0.1.0</version>
  <description>
    CPU-optimized factory inspection speech recognition system.
    Uses faster-whisper (large-v3-turbo, int8) + Silero-VAD on ROS2 Humble.
  </description>

  <maintainer email="dev@example.com">Factory ASR Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
