<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesets="Gensim"?>
<package format="3">
  <name>tm_system_bringup</name>
  <version>0.1.0</version>
  <description>TMシステム起動・統合用パッケージ（target_point_selector, direct_ctrl_selector, esp32_bridge + テスト用ダミーノード）</description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tm_system_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
